Created junit tests, and made minor changes to the style.